codex-rs/tui/src/snapshots/codex_tui__warmup_debug__tests__warmup_debug_dump_includes_persisted_attempts_and_process_events.snap
---
source: tui/src/warmup_debug_tests.rs
expression: rendered.as_str()
---
/warmup

Config:
  window_warmup = true
  pool_enabled = true
  task_running = true
  pass_requested = false
  interval = 300s
  settle = 30s
  rotation_strategy = earliestReset
  session_model = gpt-5.6-sol

Accounts:
  Personal current pri=40 available 5h=0% candidate=no
      reason=current account; warmup=not reported
      attempted=none; retry_after=none; persisted=none; id=acct-current
  Work standby pri=10 available 5h=0% candidate=no
      reason=confirmation-only; generation protected; warmup=warmup sent; start unconfirmed
      attempted=2026-09-17 08:00:30 UTC; retry_after=2026-09-17 13:00:30 UTC; persisted=failed/unconfirmed; id=acct-standby

Events (this process; oldest first):
  2026-09-17 08:00:00 UTC  task spawned
  2026-09-17 08:00:30 UTC  pass begin

0% does not confirm a 5h start. Weekly resets are separate. Persisted attempts survive restarts.
/warmup now checks one standby; it respects off/backoff and may use quota.
